# crypto-screener

./: .gitignore  README.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt
.github/workflows/: deploy-railway.yml
apps/api/: package.json
apps/api/scripts/: regen-golden.ts
apps/api/src/: env.ts  server.ts
apps/api/tests/: config.test.ts  dashboardPayload.test.ts  env.test.ts  parity.test.ts
apps/web/: next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: QualityFlagChip.tsx
apps/web/lib/: actions.ts  api.ts  briefing.ts  btc-pulse.ts  config.ts  copy.ts  dashboard-row.ts  errors.ts  format.ts  guide.ts  macro-events.ts  model-health.ts  prefs.ts  (+11 more)
config/: default.json
crypto_screener/: __init__.py  backfill.py  binance.py  cli.py  coingecko.py  coinglass.py  coinglass_enrichment.py  coinglass_pairs.py  collector.py  config.py  dashboard.py  dashboard_freshness.py  dashboard_payload.py  dashboard_rows.py  dashboard_taxonomy.py  derivatives.py  factor_definitions.py  factor_explanations.py  factors.py  market.py  models.py  pipeline.py  quality.py  report.py  scoring.py  storage.py  technicals.py  watchlists.py
crypto_screener/dashboard_static/: dashboard.css  dashboard.js  index.html
scripts/: start.mjs
tests/: test_backfill.py  test_cli.py  test_coingecko.py  test_collector.py  test_config.py  test_dashboard.py  test_decay.py  test_derivatives.py  test_packaging_railway.py  test_pipeline.py  test_regime_conditional.py  test_scoring.py  test_walkforward.py
(+169 files in other folders)
